new xml files added

--- a/sources/swconfig.ini
+++ b/sources/swconfig.ini
@@ -13,7 +13,7 @@ wetter = Nein
 # debug 1: wie -d on commendline
 # debug 2: wie -D on commendline
 # debug 3: wie -A on commendline
-debug = 0
+debug = 0			
 
 [home]
 # dieser Abschnitt wird von der Klasse MyHome gelesen
@@ -34,7 +34,7 @@ manuell_reset = 1
 
 [sequencer]
 # XML Steuerfile name
-ctrl_file           = haus1_sommer
+ctrl_file           = haus_fr1
 # Info für das ajustieren der Schaltzeiten
 adjust_needed       = 1
 evening_start_limit = 22.00
@@ -63,7 +63,7 @@ userdata = "userdata"
 #   modus 0: dose wir nur manuell geschaltet, Schaltaktionen im XML File werden ignoriert
 #   modus 1: normal zu schaltende dose, also gemäss Angaben im XML File
 #   modus 2: dose wird immer geschaltet, egal ob jemand zuhause ist oder nicht
-dose_1_schaltprio = 1
+dose_1_schaltprio = 2
 dose_2_schaltprio = 1
 dose_3_schaltprio = 1
 dose_4_schaltprio = 1
