adjust faktor eingebaut

--- a/sources/swconfig.ini
+++ b/sources/swconfig.ini
@@ -41,6 +41,7 @@ evening_start_limit = 22.00
 evening_ontime      = 15
 morning_start_limit = 03.00 
 morning_ontime      = 30
+faktor				= 17
 
 
 
@@ -85,7 +86,7 @@ dose_6_schaltprio = 1
 #   X: Smart Switch sendet Rückmeldung, also Susbcribe möglich: 0 Nein, 1 Ja 
 #
 #   Also: für 'normale' Sonoff Switches 3,1,1 setzen
-dose_1_schaltart = 2
+dose_1_schaltart = 3,1,1
 dose_2_schaltart = 2
 dose_3_schaltart = 2
 dose_4_schaltart = 2
