ini file modified

--- a/sources/swconfig.ini
+++ b/sources/swconfig.ini
@@ -6,7 +6,7 @@
  # GPIO Pin für Blink LED,  0: kein PIN verwendet               
 gpio_blink = 5                          
 # testmode Ja/Nein 
-testmode = Nein
+testmode = Ja
 reserve = notused
 wetter = Nein
 # debug 0 : no debug output
@@ -64,7 +64,7 @@ userdata = "userdata"
 #   modus 0: dose wir nur manuell geschaltet, Schaltaktionen im XML File werden ignoriert
 #   modus 1: normal zu schaltende dose, also gemäss Angaben im XML File
 #   modus 2: dose wird immer geschaltet, egal ob jemand zuhause ist oder nicht
-dose_1_schaltprio = 2
+dose_1_schaltprio = 1
 dose_2_schaltprio = 1
 dose_3_schaltprio = 1
 dose_4_schaltprio = 1
