--- a/sources/swconfig.ini
+++ b/sources/swconfig.ini
@@ -17,7 +17,6 @@ debug = 0
 
 [home]
 # dieser Abschnitt wird von der Klasse MyHome gelesen
-#
 # GPIO PIn für zuhausse Led, 0: kein PIN verwendet
 gpio_home_led = 6
 # GPIO Pin zuhause Kippschalter (Switcher V1) ,  0: kein PIN verwendet
@@ -93,8 +92,8 @@ dose_4_schaltart = 2
 dose_5_schaltart = 2
 dose_6_schaltart = 2
 #
-#  debug schalten, die dose setzt statusmeldungen beim schalten ab, obwohl genereller dbug 0 ist
-# hat sich bewährt beim Testen
+#  debug schalten, die dose setzt logmeldungen beim schalten ab, obwohl genereller dbug 0 ist
+# hat sich bewährt beim Testen: im Log sind nur Schaltaktionen
 debug_schalt = 1            
 
 
