Sommer/Winterzeit eingebaut

--- a/sources/swconfig.ini
+++ b/sources/swconfig.ini
@@ -41,7 +41,9 @@ evening_ontime      = 15
 morning_start_limit = 03.00 
 morning_ontime      = 30
 faktor				= 17
-
+daylight_saving     = 1
+spring_date         = 31.03
+fall_date           = 31.10
 
 
 [mqtt]
