--- a/sources/swconfig.ini
+++ b/sources/swconfig.ini
@@ -6,7 +6,7 @@
  # GPIO Pin für Blink LED,  0: kein PIN verwendet               
 gpio_blink = 5                          
 # testmode Ja/Nein 
-testmode = Ja
+testmode = Nein
 reserve = notused
 wetter = Nein
 # debug 0 : no debug output
