--- a/sources/mosquitto_stuff/my_mosquitto.conf
+++ b/sources/mosquitto_stuff/my_mosquitto.conf
@@ -3,8 +3,10 @@
 # See mosquitto.conf(5) for more information.
 #  from Adafruit  13. 4. 2018 by Peter
 
+#  acl_file added Dez 2021 by Peter
+#
 persistence false
 persistence_file mosquitto.db
 allow_anonymous true
 password_file /etc/mosquitto/my_passw.txt
-
+acl_file /etc/mosquitto/my_aclfile.txt
