IP-ADDR geändert zu 127.0.0.1

--- a/sources/mosquitto_stuff/my_mosquitto.conf
+++ b/sources/mosquitto_stuff/my_mosquitto.conf
@@ -9,4 +9,6 @@ persistence false
 persistence_file mosquitto.db
 allow_anonymous true
 password_file /etc/mosquitto/my_passw.txt
+#
+# acl file added but not used in switcher3
 acl_file /etc/mosquitto/my_aclfile.txt
