--- a/sources/swconfig.ini
+++ b/sources/swconfig.ini
@@ -49,6 +49,7 @@ fall_date           = 31.10
 [mqtt]
 # Switcher2 als IoT Gateway als MQTT publisher
 #  IP-Adr des MQTT Brokers (empty means: this maschine)
+# setze IP-Adresse so 192.168.1.234  (ohne "")
 mqtt_ipadr = 
 mqtt_port = 1883
 mqtt_keepalive_intervall = 45
