Ampassungen an mosquitto V2 (ACL File)

--- a/sources/mosquitto_stuff/mosquitto.conf
+++ b/sources/mosquitto_stuff/mosquitto.conf
@@ -14,8 +14,8 @@ listener 9001 127.0.0.1
 protocol websockets
 autosave_interval 900
 autosave_on_changes false
-persistence true
+persistence false
 persistence_file mosquitto.db
-allow_anonymous true
+allow_anonymous false
 password_file /etc/mosquitto/passwords
 
