--- a/sources/mosquitto_stuff/my_mosquitto.conf
+++ b/sources/mosquitto_stuff/my_mosquitto.conf
@@ -7,7 +7,7 @@
 #
 persistence false
 persistence_file mosquitto.db
-allow_anonymous true
+allow_anonymous false
 password_file /etc/mosquitto/my_passw.txt
 #
 # acl file added but not used in switcher3
