--- a/sources/swconfig.ini
+++ b/sources/swconfig.ini
@@ -53,8 +53,8 @@ fall_date           = 31.10
 mqtt_ipadr = 
 mqtt_port = 1883
 mqtt_keepalive_intervall = 45
-mqtt_userid = test127
-mqtt_pw = 123-123
+mqtt_userid = dagobert
+mqtt_pw = itscool
 mqtt_qos = 0
 mqtt_retain = 0
 retry_intervall = 4
