--- a/sources/mosquitto_stuff/mosquitto.conf
+++ b/sources/mosquitto_stuff/mosquitto.conf
@@ -9,6 +9,7 @@ message_size_limit 0
 allow_zero_length_clientid true
 allow_duplicate_messages false
 log_timestamp true
+per_listener_settings false
 listener 1883
 listener 9001 127.0.0.1
 protocol websockets
