my_mosquitto.conf angepasst, orignal config added

--- a/sources/mosquitto_stuff/my_mosquitto.conf
+++ b/sources/mosquitto_stuff/my_mosquitto.conf
@@ -8,7 +8,13 @@
 persistence false
 persistence_file mosquitto.db
 allow_anonymous false
+allow_zero_length_clientid true
+allow_duplicate_messages false
+log_timestamp true
+per_listener_settings false
+listener 1883
+listener 9001 127.0.0.1
 password_file /etc/mosquitto/my_passw.txt
 #
-# acl file added but not used in switcher3
+# acl file added 
 acl_file /etc/mosquitto/my_aclfile.txt
