listener set to 0.0.0.0 in mosquitto config

--- a/sources/mosquitto_stuff/my_mosquitto.conf
+++ b/sources/mosquitto_stuff/my_mosquitto.conf
@@ -12,7 +12,9 @@ allow_zero_length_clientid true
 allow_duplicate_messages false
 log_timestamp true
 per_listener_settings false
-listener 1883
+# set listener to 0.0.0.0 damit auch von extern auf den broker connected werden kann
+# ohne 0.0.0.0 kann nur auf der lokalen machine connected werden !!!
+listener 1883 0.0.0.0
 listener 9001 127.0.0.1
 password_file /etc/mosquitto/my_passw.txt
 #
