--- a/sources/swconfig.ini
+++ b/sources/swconfig.ini
@@ -40,10 +40,12 @@ evening_start_limit = 22.00
 evening_ontime      = 15
 morning_start_limit = 03.00 
 morning_ontime      = 30
-faktor				= 14
+faktor				= 18
 daylight_saving     = 1
+# last day of winterime (in spring)
 spring_date         = 31.03
-fall_date           = 31.10
+# last day of summertime
+fall_date           = 29.10
 
 
 [mqtt]
